welcome.lessons.welcome.array.array123.Array123.scala.error
array123:7: error: identifier expected but integer literal found.
    case 3 if (nums==[1,2,3]) => true
                      ^array123:11: error: ']' expected but '}' found.
  }
  ^array123:7: error: type application is not allowed for postfix operators
    case 3 if (nums==[1,2,3]) => true
                   ^array123:14: error: ')' expected but ':' found.
def copieTableauSaufUn (tab:Array[Int]:Boolean = {
                                      ^